@@ -6,6 +6,6 @@ var Annotater = Annotater || require("plugins/annotater.js") || Annotater;
 var log = (typeof console !== "undefined") && console.log || print;
 
 Annotater(/[\s\*](@[_$a-zA-Z0-9]*)/, function(node, match) {
-    log(Fmt("{0} annotates {1}", match[1], node));
+    log(Fmt("{0} annotates {1}", match[1], node.toString(false)));
 });
 Shaper("annotation-printer", function() {});
