@@ -13,7 +13,8 @@ First versioned release
  * Declarative Shaper.match
  * node.leadingComment and node.trailingComment properties
  * Shaper.cloneComments convenience function
- * Node methods tknString, toString, verboseString and printTree (to be renamed)
+ * Node methods tknString, toString and verboseString
+ * Node method toString replaces deprecated printTree
  * Shaper.insertBefore and Shaper.insertAfter replaces deprecated
    Shaper.insertArgument
  * Shaper.remove
